--- a/part0/04.md
+++ b/part0/04.md
@@ -4,7 +4,7 @@ sequenceDiagram
     participant server
 
     browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
-    browser->>server: Payload: {note: "TEST"}
+    note right of browser: Payload: {note: "TEST"}
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
     activate server
